--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,31 @@
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+*.local
+
+# Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Old backup
+index_old.html
